<resources>
    <string name="app_name">GoFit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="gofit">GoFit</string>
    <string name="register_user">Register User</string>
    <string name="view_all">View All</string>
    <string name="user_name">User Name</string>
    <string name="about_me">About me</string>
    <string name="friends">Friends</string>
    <string name="statistics">Statistics</string>
    <string name="this_week">This week</string>
    <string name="shoe_emoji">👟</string>
    <string name="total_steps">Total Steps</string>
    <string name="ruler_emoji">📏</string>
    <string name="total_distance">Total Distance</string>
    <string name="check_emoji">✔️️</string>
    <string name="achievements">Achievements</string>
    <string name="award_emoji">🏆</string>
    <string name="challenges">Challenges</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_about">Edit About</string>
    <string name="back">Back</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_white_bean_and_veggie_salad">WhiteBeanAndVeggieSalad</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_lastname">Name Lastname</string>
    <string name="friend_profile_image">Friend Profile Image</string>
    <string name="search_friends">Search Friends</string>
    <string name="add_friend">Add friend</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="accept">accept</string>
    <string name="deny">deny</string>
</resources>