<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/friendRequestListItemParent"
    android:layout_width="wrap_content"
    android:layout_height="65dp"
    android:padding="5dp"
    android:orientation="horizontal"
    android:layout_margin="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="25dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/friendRequestListImgV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/friend_profile_image" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/friendRequestListNameTxtV"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/name_lastname"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/friendRequestListAcceptBtn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:text="@string/accept" />

    <Button
        android:id="@+id/friendRequestListDenyBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:text="@string/deny"/>

</LinearLayout>