<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsListPage"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_topNavFriendsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btnBackFriendsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:contentDescription="@string/friends"/>


        <ImageButton
            android:id="@+id/btnAddFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:src="@drawable/ic_baseline_person_add_24"
            android:layout_alignParentEnd="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/add_friend"/>

    </RelativeLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchViewFriendsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:queryHint="Search Friends"
        app:iconifiedByDefault="false"
        android:contentDescription="@string/search_friends"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendsListPageRecView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

</LinearLayout>