<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/challengeRequestListItemParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/chal_Rlayout">


        <TextView
            android:id="@+id/chal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="7dp"
            android:fontFamily="@font/poppinsbold"
            android:text="Title"
            android:textSize="20dp" />

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chal_title">

            <androidx.cardview.widget.CardView

                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/challengeRequestListImgV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_background"
                    android:contentDescription="@string/friend_profile_image" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/challengeRequestListNameTxtV"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/name_lastname"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"/>

            <Button
                android:id="@+id/challengeRequestListAcceptBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:text="@string/accept" />

            <Button
                android:id="@+id/challengeRequestListDenyBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/deny"/>

        </LinearLayout>


    </RelativeLayout>


</androidx.cardview.widget.CardView>